--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
 
 <div class="card">
-    <h2>Tax + $279 Fee Calculator</h2>
+    <h2>Tax + Doc Fee Calculator</h2>
 
     <label>Enter Price</label>
     <input type="number" id="price" placeholder="Enter amount" step="0.01">
